# bot_telegram

./: Cargo.toml  README.md  template.env
migrations/: 20241120023045_initial.sql
src/: config.rs  lib.rs  main.rs
src/crawler/: crawler.rs
src/handler/: commands.rs  handler.rs  mod.rs
src/utils/: db.rs  mod.rs  starknet.rs
